[package]
author="Ivar Jönsson <@ivario123>"
name = "matrs"
version = "0.1.0"
edition = "2021"
description = "A package for creating and manipulating matrices and vectors"
license="MIT"
documentation = "https://ivario123.github.io/matrix_math/"
repourl = "https://github.com/ivario123/matrix_math"

[lib]
name = "matrs"
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num= "0.4.0"