[package]
authors = ["Ivar Jönsson <@ivario123>"]
categories = ["no-std"]
description = "A package for creating statically sized and typed matrices and vectors"
documentation = "https://ivario123.github.io/matrix_math/"
edition = "2021"
license = "MIT"
name = "matrs"
readme = "README.md"
repository = "https://github.com/ivario123/matrix_math"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num = {version = "0.4.0",default-features = false}

[features]
experimental = []
